testsuite/tests/parser/should_compile/T20846.hs
module T20846 where

infixr ++++
(++++) = undefined
