testsuite/tests/parser/should_fail/SuffixAtFail.hs
module Main where

foo x@    () = ()
